moved override back to private
