# api.pb.go
@@ -2,39 +2,6 @@
 // source: zvelo/msg/api.proto
 // DO NOT EDIT!
 
-/*
-	Package msg is a generated protocol buffer package.
-
-	zveloAPI
-
-	It is generated from these files:
-		zvelo/msg/api.proto
-		zvelo/msg/category.proto
-		zvelo/msg/dataset.proto
-		zvelo/msg/query.proto
-		zvelo/msg/seed.proto
-		zvelo/msg/stream.proto
-		zvelo/msg/url_override.proto
-
-	It has these top-level messages:
-		DataSet
-		QueryPollRequest
-		QueryStatus
-		QueryResult
-		QueryURLRequests
-		QueryContentRequests
-		QueryReply
-		QueryReplies
-		SeedResult
-		SeedResults
-		StreamResult
-		StreamParams
-		Override
-		Overrides
-		OverrideRequest
-		OverrideListRequest
-		OverrideListExpiredRequest
-*/
 package msg
 
 import proto "github.com/gogo/protobuf/proto"
@@ -51,12 +18,6 @@ import (
 var _ = proto.Marshal
 var _ = fmt.Errorf
 var _ = math.Inf
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the proto package it is being compiled against.
-// A compilation error at this line likely means your copy of the
-// proto package needs to be updated.
-const _ = proto.GoGoProtoPackageIsVersion2 // please upgrade the proto package
 
 // Reference imports to suppress errors if they are not otherwise used.
 var _ context.Context
@@ -77,18 +38,6 @@ type APIClient interface {
 	QueryContentV1(ctx context.Context, in *QueryContentRequests, opts ...grpc.CallOption) (*QueryReplies, error)
 	// Results of active or unexpired query
 	QueryContentResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error)
-	// Get an override by its base URL
-	OverrideGetV1(ctx context.Context, in *OverrideRequest, opts ...grpc.CallOption) (*Override, error)
-	// Add or update an override
-	OverrideAddV1(ctx context.Context, in *Override, opts ...grpc.CallOption) (*Override, error)
-	// Delete an existing override
-	OverrideDeleteV1(ctx context.Context, in *OverrideRequest, opts ...grpc.CallOption) (*Override, error)
-	// Find the override that would match a given URL
-	OverrideMatchingV1(ctx context.Context, in *OverrideRequest, opts ...grpc.CallOption) (*Override, error)
-	// List overrides
-	OverrideListV1(ctx context.Context, in *OverrideListRequest, opts ...grpc.CallOption) (*Overrides, error)
-	// List expired overrides of the given type
-	OverrideListExpiredV1(ctx context.Context, in *OverrideListExpiredRequest, opts ...grpc.CallOption) (*Overrides, error)
 }
 
 type aPIClient struct {
@@ -135,60 +84,6 @@ func (c *aPIClient) QueryContentResultV1(ctx context.Context, in *QueryPollReque
 	return out, nil
 }
 
-func (c *aPIClient) OverrideGetV1(ctx context.Context, in *OverrideRequest, opts ...grpc.CallOption) (*Override, error) {
-	out := new(Override)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/OverrideGetV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *aPIClient) OverrideAddV1(ctx context.Context, in *Override, opts ...grpc.CallOption) (*Override, error) {
-	out := new(Override)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/OverrideAddV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *aPIClient) OverrideDeleteV1(ctx context.Context, in *OverrideRequest, opts ...grpc.CallOption) (*Override, error) {
-	out := new(Override)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/OverrideDeleteV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *aPIClient) OverrideMatchingV1(ctx context.Context, in *OverrideRequest, opts ...grpc.CallOption) (*Override, error) {
-	out := new(Override)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/OverrideMatchingV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *aPIClient) OverrideListV1(ctx context.Context, in *OverrideListRequest, opts ...grpc.CallOption) (*Overrides, error) {
-	out := new(Overrides)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/OverrideListV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *aPIClient) OverrideListExpiredV1(ctx context.Context, in *OverrideListExpiredRequest, opts ...grpc.CallOption) (*Overrides, error) {
-	out := new(Overrides)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/OverrideListExpiredV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 // Server API for API service
 
 type APIServer interface {
@@ -200,18 +95,6 @@ type APIServer interface {
 	QueryContentV1(context.Context, *QueryContentRequests) (*QueryReplies, error)
 	// Results of active or unexpired query
 	QueryContentResultV1(context.Context, *QueryPollRequest) (*QueryResult, error)
-	// Get an override by its base URL
-	OverrideGetV1(context.Context, *OverrideRequest) (*Override, error)
-	// Add or update an override
-	OverrideAddV1(context.Context, *Override) (*Override, error)
-	// Delete an existing override
-	OverrideDeleteV1(context.Context, *OverrideRequest) (*Override, error)
-	// Find the override that would match a given URL
-	OverrideMatchingV1(context.Context, *OverrideRequest) (*Override, error)
-	// List overrides
-	OverrideListV1(context.Context, *OverrideListRequest) (*Overrides, error)
-	// List expired overrides of the given type
-	OverrideListExpiredV1(context.Context, *OverrideListExpiredRequest) (*Overrides, error)
 }
 
 func RegisterAPIServer(s *grpc.Server, srv APIServer) {
@@ -290,114 +173,6 @@ func _API_QueryContentResultV1_Handler(srv interface{}, ctx context.Context, dec
 	return interceptor(ctx, in, info, handler)
 }
 
-func _API_OverrideGetV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(OverrideRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).OverrideGetV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/OverrideGetV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).OverrideGetV1(ctx, req.(*OverrideRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _API_OverrideAddV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(Override)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).OverrideAddV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/OverrideAddV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).OverrideAddV1(ctx, req.(*Override))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _API_OverrideDeleteV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(OverrideRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).OverrideDeleteV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/OverrideDeleteV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).OverrideDeleteV1(ctx, req.(*OverrideRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _API_OverrideMatchingV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(OverrideRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).OverrideMatchingV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/OverrideMatchingV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).OverrideMatchingV1(ctx, req.(*OverrideRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _API_OverrideListV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(OverrideListRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).OverrideListV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/OverrideListV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).OverrideListV1(ctx, req.(*OverrideListRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _API_OverrideListExpiredV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(OverrideListExpiredRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).OverrideListExpiredV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/OverrideListExpiredV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).OverrideListExpiredV1(ctx, req.(*OverrideListExpiredRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 var _API_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "zvelo.msg.API",
 	HandlerType: (*APIServer)(nil),
@@ -418,30 +193,6 @@ var _API_serviceDesc = grpc.ServiceDesc{
 			MethodName: "QueryContentResultV1",
 			Handler:    _API_QueryContentResultV1_Handler,
 		},
-		{
-			MethodName: "OverrideGetV1",
-			Handler:    _API_OverrideGetV1_Handler,
-		},
-		{
-			MethodName: "OverrideAddV1",
-			Handler:    _API_OverrideAddV1_Handler,
-		},
-		{
-			MethodName: "OverrideDeleteV1",
-			Handler:    _API_OverrideDeleteV1_Handler,
-		},
-		{
-			MethodName: "OverrideMatchingV1",
-			Handler:    _API_OverrideMatchingV1_Handler,
-		},
-		{
-			MethodName: "OverrideListV1",
-			Handler:    _API_OverrideListV1_Handler,
-		},
-		{
-			MethodName: "OverrideListExpiredV1",
-			Handler:    _API_OverrideListExpiredV1_Handler,
-		},
 	},
 	Streams:  []grpc.StreamDesc{},
 	Metadata: "zvelo/msg/api.proto",
@@ -450,37 +201,26 @@ var _API_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("zvelo/msg/api.proto", fileDescriptorApi) }
 
 var fileDescriptorApi = []byte{
-	// 499 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x94, 0x4d, 0x6b, 0x14, 0x31,
-	0x18, 0xc7, 0x37, 0x0a, 0xa2, 0xc1, 0xbe, 0x90, 0xdd, 0xb1, 0x65, 0x5a, 0xa3, 0x0c, 0x0a, 0xd2,
-	0xc3, 0x0e, 0xab, 0x37, 0x0f, 0x42, 0x7d, 0x41, 0x84, 0x8a, 0x75, 0xc5, 0x1e, 0x84, 0x5a, 0xd7,
-	0xee, 0xc3, 0x18, 0xcd, 0x4e, 0xb6, 0x49, 0x66, 0x51, 0x4b, 0x41, 0xfc, 0x00, 0x22, 0xf8, 0x25,
-	0xfc, 0x28, 0x1e, 0x0b, 0x5e, 0x3c, 0x76, 0x47, 0x0f, 0x1e, 0xfb, 0x11, 0x24, 0x99, 0x89, 0xb3,
-	0xb3, 0x46, 0x85, 0xf6, 0x9a, 0xff, 0xf3, 0xfc, 0x7e, 0xcf, 0x33, 0x19, 0x82, 0x9b, 0x6f, 0x47,
-	0xc0, 0x45, 0x3c, 0x50, 0x49, 0xdc, 0x1b, 0xb2, 0xf6, 0x50, 0x0a, 0x2d, 0xc8, 0x19, 0x7b, 0xd8,
-	0x1e, 0xa8, 0x24, 0x0c, 0xaa, 0x7c, 0x27, 0x03, 0xf9, 0xa6, 0xa8, 0x08, 0x97, 0xab, 0xe3, 0x4c,
-	0xf2, 0x2d, 0x31, 0x02, 0x29, 0x59, 0x1f, 0x5c, 0x9a, 0x08, 0x91, 0x70, 0x30, 0xc4, 0xb8, 0x97,
-	0xa6, 0x42, 0xf7, 0x34, 0x13, 0xa9, 0x2a, 0xd2, 0xab, 0x1f, 0x4e, 0xe3, 0x93, 0xab, 0xeb, 0xf7,
-	0xc8, 0x53, 0x8c, 0x1f, 0x1a, 0xe4, 0xe3, 0xee, 0xda, 0x46, 0x87, 0x2c, 0xb5, 0x7f, 0x4b, 0xdb,
-	0xee, 0xb8, 0x0b, 0x3b, 0x19, 0x28, 0xad, 0xc2, 0x85, 0xe9, 0xb0, 0x0b, 0x43, 0xce, 0x40, 0x45,
-	0xe1, 0xfb, 0xaf, 0x3f, 0x3e, 0x9d, 0x68, 0x45, 0x73, 0xf1, 0xa8, 0x63, 0x07, 0x64, 0xa0, 0xcc,
-	0x44, 0xd7, 0xd1, 0x0a, 0x19, 0xe0, 0xf9, 0x0a, 0xa4, 0x32, 0xae, 0x7d, 0x96, 0x75, 0xc1, 0x79,
-	0xa9, 0x09, 0xcf, 0xfd, 0x69, 0x31, 0x6d, 0xd1, 0x25, 0x2b, 0xa1, 0x64, 0x79, 0x4a, 0x12, 0xef,
-	0xca, 0xa2, 0x73, 0x8b, 0xf5, 0xf7, 0xc8, 0x4b, 0x3c, 0x6b, 0x9b, 0x6e, 0x89, 0x54, 0x43, 0x6a,
-	0x64, 0x17, 0xa6, 0x79, 0x65, 0xf4, 0xff, 0xb5, 0xa8, 0x35, 0x2e, 0x46, 0xcd, 0x49, 0xe3, 0x76,
-	0xd1, 0x6d, 0x56, 0xcb, 0x70, 0xab, 0x0e, 0x3c, 0xce, 0x7a, 0x57, 0xac, 0x2c, 0x22, 0x17, 0x3d,
-	0xb2, 0xfa, 0x8a, 0x9b, 0x78, 0xe6, 0x41, 0x79, 0xd3, 0x77, 0xc1, 0xf8, 0xc2, 0x09, 0xa4, 0x4b,
-	0x9c, 0xae, 0xe9, 0xc9, 0xa2, 0x25, 0xeb, 0x0a, 0x88, 0x5d, 0xcc, 0xfd, 0x35, 0x2a, 0xde, 0xcd,
-	0x24, 0xdf, 0x23, 0x8f, 0x2a, 0xfc, 0x6a, 0xbf, 0xbf, 0xd1, 0x21, 0x3e, 0x84, 0x9f, 0xbb, 0x68,
-	0xb9, 0x24, 0x9a, 0xa9, 0x71, 0xcd, 0xa7, 0x7a, 0x86, 0xe7, 0x5d, 0xd5, 0x6d, 0xe0, 0xa0, 0xe1,
-	0x18, 0x63, 0xaf, 0x78, 0xc7, 0x7e, 0x85, 0x89, 0x2b, 0xbc, 0xdf, 0xd3, 0xdb, 0x2f, 0x58, 0x9a,
-	0x1c, 0xc5, 0x51, 0xfb, 0xcb, 0x2a, 0xc7, 0xa0, 0x44, 0x96, 0xb2, 0x4d, 0x3c, 0xeb, 0x3a, 0xd6,
-	0x98, 0x32, 0x77, 0x40, 0x3d, 0x30, 0x13, 0x39, 0x59, 0xcb, 0x93, 0xab, 0x28, 0xb0, 0xb6, 0x39,
-	0x52, 0xff, 0x60, 0x44, 0xe1, 0x60, 0x92, 0x71, 0xe7, 0xf5, 0x90, 0x49, 0x30, 0x57, 0x71, 0xf9,
-	0x2f, 0x96, 0xb2, 0xe2, 0xdf, 0xb2, 0xf3, 0x56, 0xb6, 0x40, 0x82, 0xfa, 0x6a, 0x50, 0xf4, 0xde,
-	0xbc, 0xb1, 0x3f, 0xa6, 0x8d, 0x6f, 0x63, 0xda, 0x38, 0x18, 0x53, 0x74, 0x38, 0xa6, 0xe8, 0x5d,
-	0x4e, 0xd1, 0xe7, 0x9c, 0xa2, 0x2f, 0x39, 0x45, 0xfb, 0x39, 0x45, 0x07, 0x39, 0x45, 0x3f, 0x73,
-	0xda, 0x38, 0xcc, 0x29, 0xfa, 0xf8, 0x9d, 0x36, 0x9e, 0x9c, 0x2d, 0x2c, 0xcc, 0xbe, 0x40, 0xcf,
-	0x4f, 0xd9, 0x77, 0xe5, 0xda, 0xaf, 0x00, 0x00, 0x00, 0xff, 0xff, 0x58, 0xd8, 0xf3, 0x36, 0xcc,
-	0x04, 0x00, 0x00,
+	// 324 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x12, 0xae, 0x2a, 0x4b, 0xcd,
+	0xc9, 0xd7, 0xcf, 0x2d, 0x4e, 0xd7, 0x4f, 0x2c, 0xc8, 0xd4, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17,
+	0xe2, 0x04, 0x0b, 0xea, 0xe5, 0x16, 0xa7, 0x4b, 0x89, 0x22, 0xe4, 0x0b, 0x4b, 0x53, 0x8b, 0x2a,
+	0x21, 0x2a, 0xa4, 0x64, 0xd2, 0xf3, 0xf3, 0xd3, 0x73, 0x52, 0x41, 0x7a, 0xf4, 0x13, 0xf3, 0xf2,
+	0xf2, 0x4b, 0x12, 0x4b, 0x32, 0xf3, 0xf3, 0x8a, 0x21, 0xb2, 0x46, 0xdb, 0x99, 0xb9, 0x98, 0x1d,
+	0x03, 0x3c, 0x85, 0xe2, 0xb8, 0xb8, 0x02, 0x41, 0x9a, 0x42, 0x83, 0x7c, 0xc2, 0x0c, 0x85, 0xa4,
+	0xf5, 0xe0, 0xc6, 0xea, 0xc1, 0x84, 0x83, 0x52, 0x0b, 0x4b, 0x53, 0x8b, 0x4b, 0x8a, 0xa5, 0xc4,
+	0xd1, 0x25, 0x83, 0x52, 0x0b, 0x72, 0x32, 0x53, 0x8b, 0x95, 0xa4, 0x9a, 0x2e, 0x3f, 0x99, 0xcc,
+	0x24, 0xa2, 0xc4, 0xaf, 0x5f, 0x66, 0x08, 0x76, 0x42, 0x66, 0x6a, 0xb1, 0x7e, 0x69, 0x51, 0x8e,
+	0x15, 0xa3, 0x96, 0x50, 0x2e, 0x97, 0x00, 0xc2, 0xa0, 0xe2, 0xd2, 0x9c, 0x12, 0x6c, 0xb6, 0x04,
+	0xe4, 0xe7, 0xe4, 0x40, 0xad, 0x91, 0x12, 0xc3, 0xb4, 0x05, 0xa4, 0x4d, 0x49, 0x05, 0x6c, 0x89,
+	0x9c, 0x90, 0x0c, 0x9a, 0x25, 0xfa, 0xd5, 0x45, 0x10, 0x9d, 0xf1, 0x99, 0x29, 0xb5, 0x42, 0x59,
+	0x5c, 0x7c, 0x60, 0x4d, 0xce, 0xf9, 0x79, 0x25, 0xa9, 0x79, 0x20, 0xcb, 0xe4, 0xd1, 0xcd, 0x83,
+	0x4a, 0x11, 0xf6, 0x96, 0x1c, 0xd8, 0x46, 0x09, 0x25, 0x61, 0x64, 0x1b, 0x93, 0x21, 0xba, 0x41,
+	0x5e, 0x2b, 0xe5, 0x12, 0x41, 0x35, 0x90, 0x12, 0xef, 0x69, 0x80, 0x2d, 0x53, 0x12, 0x52, 0xc0,
+	0x62, 0x19, 0x8a, 0x17, 0x9d, 0xec, 0x2e, 0x3c, 0x94, 0x63, 0xb8, 0xf1, 0x50, 0x8e, 0xe1, 0xc1,
+	0x43, 0x39, 0xc6, 0x0f, 0x0f, 0xe5, 0x18, 0x1b, 0x1e, 0xc9, 0x31, 0xae, 0x78, 0x24, 0xc7, 0x78,
+	0xe2, 0x91, 0x1c, 0xe3, 0x85, 0x47, 0x72, 0x8c, 0x0f, 0x1e, 0xc9, 0x31, 0xbe, 0x78, 0x24, 0xc7,
+	0xf0, 0xe1, 0x91, 0x1c, 0xe3, 0x84, 0xc7, 0x72, 0x0c, 0x51, 0x3c, 0x10, 0x2b, 0x33, 0xc1, 0x69,
+	0x24, 0x89, 0x0d, 0x9c, 0x00, 0x8c, 0x01, 0x01, 0x00, 0x00, 0xff, 0xff, 0xce, 0xc3, 0xcd, 0x09,
+	0x57, 0x02, 0x00, 0x00,
 }
