# swagger.json
@@ -24,207 +24,6 @@
   "host": "api.zvelo.com",
   "basePath": "/",
   "paths": {
-    "/v1/overrides": {
-      "get": {
-        "tags": [
-          "API"
-        ],
-        "summary": "List overrides",
-        "operationId": "OverrideListV1",
-        "security": [
-          {
-            "authorization": [
-              "zvelo.override"
-            ]
-          }
-        ],
-        "parameters": [
-          {
-            "type": "string",
-            "description": "List overrides that contain this string in the TargetURL field.",
-            "name": "target_search",
-            "in": "query"
-          },
-          {
-            "type": "string",
-            "description": "List overrides that contain this string in the base URL field.",
-            "name": "base_search",
-            "in": "query"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/msgOverrides"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "API"
-        ],
-        "summary": "Add or update an override",
-        "operationId": "OverrideAddV1",
-        "security": [
-          {
-            "authorization": [
-              "zvelo.override"
-            ]
-          }
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/msgOverride"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/msgOverride"
-            }
-          }
-        }
-      }
-    },
-    "/v1/overrides/expired": {
-      "get": {
-        "tags": [
-          "API"
-        ],
-        "summary": "List expired overrides of the given type",
-        "operationId": "OverrideListExpiredV1",
-        "security": [
-          {
-            "authorization": [
-              "zvelo.override"
-            ]
-          }
-        ],
-        "parameters": [
-          {
-            "enum": [
-              "UNKNOWN_OVERRIDE",
-              "HUMAN_OVERRIDE"
-            ],
-            "type": "string",
-            "default": "UNKNOWN_OVERRIDE",
-            "description": " - HUMAN_OVERRIDE: Created by a human",
-            "name": "type",
-            "in": "query"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/msgOverrides"
-            }
-          }
-        }
-      }
-    },
-    "/v1/overrides/matching/{url}": {
-      "get": {
-        "tags": [
-          "API"
-        ],
-        "summary": "Find the override that would match a given URL",
-        "operationId": "OverrideMatchingV1",
-        "security": [
-          {
-            "authorization": [
-              "zvelo.override"
-            ]
-          }
-        ],
-        "parameters": [
-          {
-            "type": "string",
-            "name": "url",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/msgOverride"
-            }
-          }
-        }
-      }
-    },
-    "/v1/overrides/{url}": {
-      "get": {
-        "tags": [
-          "API"
-        ],
-        "summary": "Get an override by its base URL",
-        "operationId": "OverrideGetV1",
-        "security": [
-          {
-            "authorization": [
-              "zvelo.override"
-            ]
-          }
-        ],
-        "parameters": [
-          {
-            "type": "string",
-            "name": "url",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/msgOverride"
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "API"
-        ],
-        "summary": "Delete an existing override",
-        "operationId": "OverrideDeleteV1",
-        "security": [
-          {
-            "authorization": [
-              "zvelo.override"
-            ]
-          }
-        ],
-        "parameters": [
-          {
-            "type": "string",
-            "name": "url",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/msgOverride"
-            }
-          }
-        }
-      }
-    },
     "/v1/queries/content": {
       "post": {
         "tags": [
@@ -433,65 +232,6 @@
         },
         "malicious": {
           "$ref": "#/definitions/DataSetMalicious"
-        }
-      }
-    },
-    "msgOverride": {
-      "type": "object",
-      "title": "Override",
-      "properties": {
-        "comment": {
-          "type": "string"
-        },
-        "created_at": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "expires_at": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "target_url": {
-          "type": "string",
-          "title": "URL that this override will point to"
-        },
-        "type": {
-          "$ref": "#/definitions/msgOverrideType"
-        },
-        "url": {
-          "type": "string",
-          "title": "Base URL this override applies to"
-        },
-        "user_id": {
-          "type": "string",
-          "title": "User or service that created this override"
-        },
-        "wildcard": {
-          "type": "boolean",
-          "format": "boolean",
-          "title": "Determines if this override applies to all subdomains and paths"
-        }
-      }
-    },
-    "msgOverrideType": {
-      "description": "- HUMAN_OVERRIDE: Created by a human",
-      "type": "string",
-      "title": "OverrideType",
-      "default": "UNKNOWN_OVERRIDE",
-      "enum": [
-        "UNKNOWN_OVERRIDE",
-        "HUMAN_OVERRIDE"
-      ]
-    },
-    "msgOverrides": {
-      "type": "object",
-      "title": "Overrides",
-      "properties": {
-        "items": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/msgOverride"
-          }
         }
       }
     },
